# chemai2

./: .gitignore  .test_tracker.json  CONTRIBUTING_GUIDE.md  FAQ.md  QUICKSTART.md  README.md  REPRODUCE.md  check_pages.py  environment.yml  error_trace.txt  pyproject.toml  pytest_collect_err.txt  pytest_collect_err2.txt  pytest_collect_err2_utf8.txt  pytest_collect_err_utf8.txt  pytest_cv_err.txt  pytest_cv_err_utf8.txt  pytest_out.txt  pytest_out_utf8.txt  requirements.txt  run_django.bat  run_django.sh  run_nicegui.bat  run_nicegui.sh  run_streamlit.bat  run_streamlit.sh  setup.bat  setup.sh  test.xyz  test_error.txt  test_out.txt
backend/: README.md  preset_manager.py
backend/chem/: __init__.py  base.py  charge_config.py  chemprop_adapter.py  cosmo_adapter.py  (+18 more)
examples/: advanced_descriptor_selection.py  calculated_descriptors.csv  data_loading_eda_example.py  descriptor_calculation_example.py  dim_reduction_example.py  model_training_example.py
frontend_django/: db.sqlite3  manage.py
frontend_nicegui/: README.md  main.py
frontend_streamlit/: __init__.py  app.py
scripts/: setup_uma.bat  test_tracker.py
tests/: conftest.py  diagnose_automl_failure.py  test_automl_extra.py  test_automl_integration.py  test_base_and_feature_gen.py  test_bayesian_opt.py  test_bayesian_optimizer_comprehensive.py  test_bayesian_optimizer_extra.py  test_benchmark.py  test_benchmark_datasets_extra.py  test_benchmark_extra.py  test_bo_visualizer.py  test_bo_visualizer_comprehensive.py  test_charge_config.py  test_charge_config_extra.py  test_charge_extended.py  test_chem.py  test_chem_base_extra.py  test_chem_init.py  test_chem_init_extra.py  test_chemprop_adapter.py  test_col_preprocessor_comprehensive.py  test_col_preprocessor_extra.py  test_column_selector_extra.py  test_config_extra.py  test_constraint_ui_helpers.py  test_constraints_extra.py  test_cosmo_adapter.py  test_coverage_gaps_batch3.py  test_cv_bias_evaluator.py  test_cv_bias_evaluator_extra.py  test_cv_dynamic_extra.py  test_cv_manager_comprehensive.py  test_cv_manager_extra.py  test_cv_manager_new.py  test_cv_walkforward.py  test_data.py  test_data_cleaner.py  test_data_cleaner_extra.py  test_descriptastorus_adapter.py  (+71 more)
tools/: add_xtb_to_path.bat  install_interpretability.bat  setup_all.bat
(+120 files in other folders)
