[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ml_gui_app"
version = "0.1.0"
description = "ML GUI Application for tabular data and SMILES compound analysis"
authors = [{ name = "App Owner" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

# ---- 必須依存 ----
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
    "streamlit>=1.30",
    "django>=4.2",
    "djangorestframework>=3.14",
    "mlflow>=2.10",
    "joblib>=1.3",
    "category-encoders>=2.6",
    "mlxtend>=0.23",
    "shap>=0.44",
    "psycopg2-binary>=2.9",       # PostgreSQL
    "django-celery-results>=2.5",
    "celery>=5.3",
    "redis>=5.0",
    "pyarrow>=12.0",               # Parquet
    "openpyxl>=3.1",               # Excel
    "pyyaml>=6.0",
]

# ---- オプション依存 ----
[project.optional-dependencies]
boost = [
    "lightgbm>=4.0",
    "catboost>=1.2",
]
optim = [
    "optuna>=3.4",
    "scikit-optimize>=0.9",
]
dim_reduce = [
    "umap-learn>=0.5",
    "phate>=1.0",
]
interpret = [
    "sage-importance>=0.0.6",
    "lime>=0.2",
    "eli5>=0.13",
    "boruta>=0.3",
]
chem = [
    "mordred>=1.2",
    "dscribe>=2.1",
    "unipka>=1.0",
]
chem_dl = [
    "torch>=2.0",
    "mace-torch>=0.3",
    "torchani>=2.2",
    "deepchem>=2.7",
    "fairchem-core>=1.0",    # UMA
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "playwright>=1.40",
    "pytest-playwright>=0.4",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
all = [
    "ml_gui_app[boost,optim,dim_reduce,interpret,chem,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend_streamlit*", "frontend_django*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=backend --cov-branch --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
